k8s-cluster-configuration/applications/trials/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: trials-service
  namespace: trials
spec:
  selector:
    app: trials
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
