k8s-cluster-configuration/applications/trials/base/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: trials-gateway
  namespace: trials
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "trials.a2w.io"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: trials.a2w.io
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: trials-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trials
  namespace: trials
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: trials-gateway
      namespace: trials
  hostnames:
    - trials.a2w.io
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: trials-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
